RESOLVED FIXED74255
reproducible crash after closing web inspector and browser window (iCab)
https://bugs.webkit.org/show_bug.cgi?id=74255
Summary reproducible crash after closing web inspector and browser window (iCab)
trinler
Reported 2011-12-11 07:20:44 PST
Created attachment 118706 [details] iCab crashlogs steps to reproduce crash: - open any (even empty) page in iCab - open web inspector (no matter if attached or not) - close web inspector - close window => crash crashing started with r101238. up to r101192 no crash happened. crash does not happen with Safari/WebKit, only with iCab/WebKit, but developer states it seems to be a webkit-bug. some crashlogs attached.
Attachments
iCab crashlogs (155.49 KB, application/zip)
2011-12-11 07:20 PST, trinler
no flags
One crash log from the archive (31.43 KB, text/plain)
2011-12-11 14:16 PST, Mark Rowe (bdash)
no flags
Patch (6.78 KB, patch)
2011-12-19 10:14 PST, Pavel Feldman
no flags
[Patch] for ews (7.77 KB, patch)
2011-12-19 11:43 PST, Pavel Feldman
yurys: review+
Mark Rowe (bdash)
Comment 1 2011-12-11 14:16:26 PST
Created attachment 118712 [details] One crash log from the archive
Pavel Feldman
Comment 2 2011-12-12 10:46:27 PST
Is it repeatable with the tip of the tree WebKit? It might be a WebKit bug in a sense that the way embedder interacts with the WebKit might have changed. In any case, having it working in Safari suggests that the embedder is doing something wrong.
trinler
Comment 3 2011-12-13 05:44:30 PST
It is repeatable with any WebKit revision since r101238 including latest r102661. If I close the Browserwindow without closing the WebInspector first, no crash happens. If I close the WebInspector, I can surf the web inside the window without problems until I close the window, then it crashes. So it seems like the window-close-function tries to access something which already disappears when closing the inspector. Cannot say who does somethning wrong or if an API change happened between r101192 and r101238.
Pavel Feldman
Comment 4 2011-12-19 10:14:22 PST
Pavel Feldman
Comment 5 2011-12-19 11:43:18 PST
Created attachment 119894 [details] [Patch] for ews
Pavel Feldman
Comment 6 2011-12-20 02:03:08 PST
trinler
Comment 7 2011-12-20 11:17:12 PST
Confirmed. Issue is resolved in r103339. Thank you very much.
Note You need to log in before you can comment on or make changes to this bug.