Web Inspector: reproducible crash after closing web inspector and browser window  (iCab) https://bugs.webkit.org/show_bug.cgi?id=74255

Patch by Pavel Feldman <pavel.feldman@gmail.com> on 2011-12-20
Reviewed by Yury Semikhatsky.

Source/WebKit/cf:

* WebCoreSupport/WebInspectorClientCF.cpp:
(WebInspectorClient::releaseFrontend):

Source/WebKit/mac:

* WebCoreSupport/WebInspectorClient.h:
* WebCoreSupport/WebInspectorClient.mm:
(WebInspectorClient::bringFrontendToFront):
(-[WebInspectorWindowController destroyInspectorView:]):

Source/WebKit/win:

* WebCoreSupport/WebInspectorClient.cpp:
(WebInspectorClient::~WebInspectorClient):
(WebInspectorFrontendClient::destroyInspectorView):
* WebCoreSupport/WebInspectorClient.h:

Canonical link: https://commits.webkit.org/91674@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103314 268f45cc-cd09-0410-ab3c-d52691b4dbfc